--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        hello
+        hello gabe
         
         <script src="" async defer></script>
     </body>
