Update index.html - Hi

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
     <body>
         hello gabe
+
+        <h2> hello david</h2>
         
         <script src="" async defer></script>
     </body>
