--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <body>
         hello gabe
 
+<h1> hello gabe and david
+
         <h2> hello david</h2>
         
         <script src="" async defer></script>
